WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255612
[GStreamer][WebRTC] Instrument the SDP ICE candidate parsing with debug logs
https://bugs.webkit.org/show_bug.cgi?id=255612
Summary
[GStreamer][WebRTC] Instrument the SDP ICE candidate parsing with debug logs
Philippe Normand
Reported
2023-04-18 10:10:23 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-04-18 10:12:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12872
EWS
Comment 2
2023-04-19 01:58:37 PDT
Committed
263123@main
(633c039a4899): <
https://commits.webkit.org/263123@main
> Reviewed commits have been landed. Closing PR #12872 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-19 01:59:19 PDT
<
rdar://problem/108249689
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug